# javelin

./: .gitignore  CHANGELOG.md  LICENSE  Profiling.hs  README.md  cabal.project  cabal.project.benchmarking  cabal.project.profiling  series.cabal
.github/workflows/: documentation.yaml  haskell-ci.yml
benchmark/: Main.hs
benchmarks/: Comparison.hs  Operations.hs
docs/: user-guide.md
docs/data/: AAPL.csv
javelin/: CHANGELOG.md  LICENSE  javelin.cabal
javelin-finance/: CHANGELOG.md  javelin-finance.cabal
javelin-finance/scripts/: doctest.sh
javelin-finance/src/Data/Series/: Metrics.hs
javelin-finance/src/Data/Series/Finance/: Metrics.hs
javelin-finance/test/: Main.hs
javelin-finance/test/Test/: Utils.hs
javelin-finance/test/Test/Data/Series/: Metrics.hs
javelin-finance/test/Test/Data/Series/Finance/: Metrics.hs
javelin-frames/: CHANGELOG.md  LICENSE  javelin-frames.cabal
javelin-frames/benchmarks/: Main.hs
javelin-frames/src/Data/: Frame.hs
javelin-frames/src/Data/Frame/: Tutorial.hs
javelin-frames/test/: Main.hs
javelin-frames/test/Test/Data/: Frame.hs
javelin-io/: CHANGELOG.md  javelin-io.cabal
javelin-io/scripts/: process_thrift_definitions.sh
javelin-io/src/Data/Series/: IO.hs
javelin-io/src/Data/Series/Generic/: IO.hs
javelin-io/src/Data/Series/Generic/IO/Parquet/: Types.hs
javelin-io/src/Data/Series/Unboxed/: IO.hs
javelin-io/test/: Main.hs
javelin-io/test/Test/Data/Series/: IO.hs
javelin-io/test/data/: lat-long-city.csv
javelin/benchmarks/: Comparison.hs  Operations.hs
javelin/files/: aapl.txt
javelin/scripts/: bench-report.hs  doctest.sh
javelin/src/Data/: Series.hs
javelin/src/Data/Series/: Generic.hs  Index.hs  Tutorial.hs  Unboxed.hs
javelin/src/Data/Series/Generic/: Aggregation.hs  Definition.hs  Internal.hs  Numeric.hs  Scans.hs  View.hs  Zip.hs
javelin/src/Data/Series/Index/: Definition.hs  Internal.hs
javelin/test/: Main.hs
javelin/test/Test/Data/Series/: Index.hs
javelin/test/Test/Data/Series/Generic/: Aggregation.hs  Definition.hs  Numeric.hs  View.hs  Zip.hs
opal/: CHANGELOG.md  opal.cabal
opal-io/: CHANGELOG.md  LICENSE  opal-io.cabal
opal-io/src/Data/Series/: IO.hs
opal-io/test/Test/Data/Series/: IO.hs
opal/benchmarks/: Comparison.hs
opal/scripts/: doctest.sh
opal/src/Data/: Series.hs
opal/src/Data/Series/: Generic.hs  Index.hs  Unboxed.hs
opal/src/Data/Series/Generic/: Aggregation.hs  Broadcast.hs  Definition.hs  Internal.hs  View.hs  Windowing.hs  Zip.hs
opal/test/: Main.hs
opal/test/Test/: Utils.hs
opal/test/Test/Data/Series/: Index.hs
opal/test/Test/Data/Series/Generic/: Aggregation.hs  Broadcast.hs  View.hs  Zip.hs
scripts/: bench-report.hs  profile.sh
src/Data/: Series.hs
src/Data/Series/: Aggregation.hs  Broadcast.hs  Conversion.hs  Definition.hs  Generic.hs  IO.hs  Index.hs  Internal.hs  Numeric.hs  Unboxed.hs  View.hs  Windowing.hs
src/Data/Series/Broadcast/: Drop.hs  Propagate.hs
src/Data/Series/Generic/: Aggregation.hs  Definition.hs  IO.hs  Internal.hs  Numeric.hs  View.hs
src/Data/Series/Generic/Broadcast/: Drop.hs  Propagate.hs
test/: Main.hs
test/Test/Data/: Series.hs
test/Test/Data/Series/: Aggregation.hs  Broadcast.hs  Conversion.hs  Definition.hs  IO.hs  Index.hs  Numeric.hs  View.hs  Windowing.hs
test/Test/Data/Series/Generic/: Broadcast.hs  IO.hs  Numeric.hs  View.hs  Windowing.hs
test/data/: columns.json
