cabal-version:      3.0
name:               series
version:            0.1.0.0
synopsis:           Labeled one-dimensional arrays
description:
license:            MIT
license-file:       LICENSE
author:             Laurent René de Cotret
maintainer:         laurent.decotret@outlook.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:

common common
    default-language: GHC2021
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -fhide-source-paths
                 -Wmissing-export-lists
                 -Wpartial-fields

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:  Data.Series
    other-modules:    Data.Series.Aggregation
                      Data.Series.Broadcast
                      Data.Series.Broadcast.Drop
                      Data.Series.Broadcast.Propagate
                      Data.Series.Definition
                      Data.Series.Numeric
                      Data.Series.View
    build-depends:    base >=4.15.0.0,
                      containers,
                      deepseq,
                      vector

test-suite series-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Data.Series
                      Test.Data.Series.Aggregation
                      Test.Data.Series.Broadcast
                      Test.Data.Series.Conversion
                      Test.Data.Series.Definition
                      Test.Data.Series.Numeric
                      Test.Data.Series.View
                      Test.Utils
    build-depends:    base,
                      containers,
                      hedgehog,
                      ieee754,
                      series,
                      statistics,
                      tasty,
                      tasty-hedgehog,
                      tasty-hunit,
                      HUnit,
                      tasty-hspec,
                      vector


benchmark comparison-containers
    import:           common
    type:             exitcode-stdio-1.0
    ghc-options:      -Wall -O2 -rtsopts
    hs-source-dirs:   benchmarks
    main-is:          Comparison.hs
    build-depends:    base,
                      containers,
                      series,
                      vector, 
                      criterion, 
                      deepseq, 
                      random, 
                      directory


benchmark operations
    import:           common
    type:             exitcode-stdio-1.0
    ghc-options:      -rtsopts -threaded -O2
    hs-source-dirs:   benchmarks
    main-is:          Operations.hs
    build-depends:    base,
                      containers,
                      deepseq,
                      series,
                      criterion


executable bench-report
    import:           common
    main-is:          bench-report.hs
    hs-source-dirs:   scripts
    build-depends:    base, 
                      csv