cabal-version:      3.0
name:               series
version:            0.1.0.0
synopsis:           Labeled one-dimensional arrays
description:
license:            MIT
license-file:       LICENSE
author:             Laurent René de Cotret
maintainer:         laurent.decotret@outlook.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: test/data/*.csv
                    test/data/*.json

common common
    default-language: GHC2021
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -fhide-source-paths
                 -Wpartial-fields

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:  Data.Series
                      Data.Series.Generic
                      Data.Series.Generic.Internal
                      Data.Series.Index
    other-modules:    Data.Series.Generic.Aggregation
                      Data.Series.Generic.Broadcast
                      Data.Series.Generic.Broadcast.Drop
                      Data.Series.Generic.Broadcast.Propagate
                      Data.Series.Generic.Definition
                      Data.Series.Generic.IO
                      Data.Series.Generic.Numeric
                      Data.Series.Generic.View
                      Data.Series.Generic.Windowing
    build-depends:    aeson >= 2.0 && < 2.2,
                      base  >=4.15.0.0,
                      bytestring,
                      cassava,
                      containers,
                      deepseq,
                      text,
                      vector

test-suite series-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Data.Series
                      Test.Data.Series.Index
                      Test.Data.Series.Generic.Aggregation
                      Test.Data.Series.Generic.Broadcast
                      Test.Data.Series.Generic.Definition
                      Test.Data.Series.Generic.IO
                      Test.Data.Series.Generic.Numeric
                      Test.Data.Series.Generic.View
                      Test.Data.Series.Generic.Windowing
                      Test.Utils
    build-depends:    base,
                      containers,
                      hedgehog,
                      ieee754,
                      series,
                      statistics,
                      tasty,
                      tasty-hedgehog,
                      tasty-hunit,
                      HUnit,
                      tasty-hspec,
                      vector


benchmark comparison-containers
    import:           common
    type:             exitcode-stdio-1.0
    ghc-options:      -Wall -O2 -rtsopts
    hs-source-dirs:   benchmarks
    main-is:          Comparison.hs
    build-depends:    base,
                      containers,
                      series,
                      vector, 
                      criterion, 
                      deepseq, 
                      random, 
                      directory


benchmark operations
    import:           common
    type:             exitcode-stdio-1.0
    ghc-options:      -rtsopts -threaded -O2
    hs-source-dirs:   benchmarks
    main-is:          Operations.hs
    build-depends:    base,
                      containers,
                      deepseq,
                      series,
                      criterion


executable bench-report
    import:           common
    main-is:          bench-report.hs
    hs-source-dirs:   scripts
    build-depends:    base, 
                      csv
