cabal-version:      3.0
name:               javelin-frames
version:            0.1.0.0
synopsis:           Type-safe data frames based on higher-kinded types.
-- description:
license:            MIT
license-file:       LICENSE
author:             Laurent P. René de Cotret
maintainer:         laurent.decotret@outlook.com
category:           Data, Data Structures, Data Science
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC ==9.12.1
                     || ==9.10.1
                     || ==9.8.4
                     || ==9.6.4
                     || ==9.4.8

description:
        
        This package implements data frames, a data structure
        where record types defined by the user can be transformed
        into records of columns. See ["Data.Frame.Tutorial"] for a user guide.

source-repository head
  type:     git
  location: https://github.com/LaurentRDC/javelin

common common
    default-language: GHC2021
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -fhide-source-paths
                 -Wpartial-fields

library
    import:           common
    exposed-modules:  Data.Frame
                      Data.Frame.Tutorial
    build-depends:    base >=4.15.0.0 && <4.22,
                      containers >=0.6 && <0.8,
                      these ^>=1.2,
                      vector >=0.12.3.0 && <0.14,
                      vector-algorithms ^>=0.9
    hs-source-dirs:   src
    default-language: GHC2021

test-suite javelin-frames-test
    import:           common
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Data.Frame
    build-depends:    base                >=4.15.0.0 && <4.22,
                      containers,
                      hedgehog,
                      javelin-frames,
                      tasty,
                      tasty-hedgehog,
                      tasty-hunit,
                      vector

benchmark bench-frames
    import:           common
    type:             exitcode-stdio-1.0
    ghc-options:      -rtsopts
    hs-source-dirs:   benchmarks
    main-is:          Main.hs
    build-depends:    base >=4.15.0.0 && <4.22,
                      criterion ^>=1.6,
                      deepseq,
                      javelin-frames,
                      vector