cabal-version:      3.0
name:               javelin
version:            0.1.0.0
synopsis:           Labeled one-dimensional arrays
description:
license:            MIT
license-file:       LICENSE
author:             Laurent René de Cotret
maintainer:         laurent.decotret@outlook.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    files/aapl.txt
tested-with:        GHC ==9.6.1
                     || ==9.4.5  

common common
    default-language: GHC2021
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -fhide-source-paths
                 -Wpartial-fields

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:  Data.Series
                      Data.Series.Generic
                      Data.Series.Generic.Internal
                      Data.Series.Index
                      Data.Series.Tutorial
                      Data.Series.Unboxed
    other-modules:    Data.Series.Generic.Aggregation
                      Data.Series.Generic.Definition
                      Data.Series.Generic.Numeric
                      Data.Series.Generic.Scans
                      Data.Series.Generic.View
                      Data.Series.Generic.Windowing
                      Data.Series.Generic.Zip
    build-depends:    base  >=4.15.0.0 && <5,
                      containers,
                      deepseq,
                      vector,
                      vector-algorithms

test-suite javelin-test
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.Data.Series
                      Test.Data.Series.Index
                      Test.Data.Series.Generic.Aggregation
                      Test.Data.Series.Generic.Definition
                      Test.Data.Series.Generic.Numeric
                      Test.Data.Series.Generic.View
                      Test.Data.Series.Generic.Windowing
                      Test.Data.Series.Generic.Zip
                      Test.Utils
    build-depends:    base,
                      containers,
                      hedgehog,
                      ieee754,
                      javelin,
                      statistics,
                      tasty,
                      tasty-hedgehog,
                      tasty-hunit,
                      HUnit,
                      tasty-hspec,
                      vector


benchmark comparison-containers
    import:           common
    type:             exitcode-stdio-1.0
    ghc-options:      -Wall -O2 -rtsopts
    hs-source-dirs:   benchmarks
    main-is:          Comparison.hs
    build-depends:    base,
                      containers,
                      javelin,
                      vector, 
                      criterion, 
                      deepseq, 
                      random, 
                      directory


benchmark operations
    import:           common
    type:             exitcode-stdio-1.0
    ghc-options:      -rtsopts -threaded -O2
    hs-source-dirs:   benchmarks
    main-is:          Operations.hs
    build-depends:    base,
                      containers,
                      deepseq,
                      javelin,
                      criterion


executable bench-report
    import:           common
    main-is:          bench-report.hs
    hs-source-dirs:   scripts
    build-depends:    base, 
                      csv
